objects/IntakeReason__c.object
<CustomObject>
    <fields>
        <fullName>Imp_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Imp Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IntReturnId__c</fullName>
        <label>IntReturnId</label>
        <referenceTo>IntakeReturn__c</referenceTo>
        <relationshipName>IntakeReasons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Non_Completion_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Non Completion Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_ImpComment_Local__c</fullName>
        <description>This is a back end field to store Reason and Implementation comments Field value for Local records.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason_ImpComment_Local</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Need finalized benefits</fullName>
                </value>
                <value>
                    <fullName>Benefit discrepancies</fullName>
                </value>
                <value>
                    <fullName>Documents not attached</fullName>
                </value>
                <value>
                    <fullName>Need additional paperwork/Incomplete paperwork</fullName>
                </value>
                <value>
                    <fullName>Rate clarification - incomplete rates</fullName>
                </value>
                <value>
                    <fullName>Opportunity updates required</fullName>
                </value>
                <value>
                    <fullName>Mismatch documents</fullName>
                </value>
                <value>
                    <fullName>Mismatch effective date</fullName>
                </value>
                <value>
                    <fullName>Return Requested by Sales/Account Management</fullName>
                </value>
                <value>
                    <fullName>Incomplete Product/Plan Configuration</fullName>
                </value>
                <value>
                    <fullName>Incomplete paperwork</fullName>
                </value>
                <value>
                    <fullName>Missing paperwork</fullName>
                </value>
                <value>
                    <fullName>Invalid Group Name/Group Number</fullName>
                </value>
                <value>
                    <fullName>Incorrect Implementation Submission Type (New Bus, IGAP, Renewal, Changes, Full Group Term)</fullName>
                </value>
                <value>
                    <fullName>Update Broker Comp/Sales Comp Information</fullName>
                </value>
                <value>
                    <fullName>Group Contacts Require Review/Updates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending AM Action</fullName>
                    <default>true</default>
                    <label>Pending AM Action</label>
                </value>
                <value>
                    <fullName>Task Created for Tracking</fullName>
                </value>
                <value>
                    <fullName>Corrected By AM</fullName>
                </value>
                <value>
                    <fullName>Cannot Correct At This Time</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Invalid Intake Return</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Intake Reason</label>
    <nameField>
        <displayFormat>REASON-{000000}</displayFormat>
        <label>Intake Reasons Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intake Reasons</pluralLabel>
    <recordTypes>
        <fullName>IntakeReasons_Lock</fullName>
        <active>true</active>
        <label>IntakeReasons Lock</label>
    </recordTypes>
    <recordTypes>
        <fullName>IntakeReasons_Lock_Sales</fullName>
        <active>true</active>
        <label>IntakeReasons Lock Sales</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>